--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="Base.Theme.SimpleSusDetector" parent="Theme.Material3.Light">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+<resources>
+    <!-- Base application theme using Material Design 3 -->
+    <style name="Base.Theme.SimpleSusDetector" parent="Theme.Material3.DayNight">
+        <!-- Customize your theme here. -->
     </style>
 
     <style name="Theme.SimpleSusDetector" parent="Base.Theme.SimpleSusDetector" />
